Fixed readability issues

--- a/style.css
+++ b/style.css
@@ -44,24 +44,20 @@ h2,
 h3 {
     line-height: 1.2;
     font-weight: 700;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 h1 {
     font-size: 3.5rem;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
 }
 
 h2 {
     font-size: 3rem;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
 }
 
 h3 {
     font-size: 2.5rem;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
 }
 
 img {
@@ -70,6 +66,8 @@ img {
 }
 
 p {
+    font-size: 2rem;
+    font-weight: 700;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
 }
@@ -82,15 +80,11 @@ p {
 }
 
 .page-title {
-    font-size: 2.5rem;
-    font-weight: 700;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
 
 .page-description {
-    font-size: 2.5rem;
-    font-weight: 700;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
